# crocoddyl

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  arm-manipulation-optctrl.cpp  bipedal-timings.cpp  unicycle-optctrl.cpp  whole-body-optctrl.cpp
include/crocoddyl/core/: action-base.hpp  cost-base.hpp  diff-action-base.hpp  fwd.hpp
include/crocoddyl/core/actions/: lqr.hpp
include/crocoddyl/core/activations/: quadratic-barrier.hpp  quadratic.hpp  weighted-quadratic.hpp
include/crocoddyl/core/integrator/: euler.hpp
include/crocoddyl/core/optctrl/: shooting.hpp
include/crocoddyl/core/solvers/: ddp.hpp  fddp.hpp  solver-base.hpp
include/crocoddyl/core/states/: euclidean.hxx
include/crocoddyl/core/utils/: exception.hpp
include/crocoddyl/multibody/actions/: contact-fwddyn.hxx  free-fwddyn.hxx  impulse-fwddyn.hpp
include/crocoddyl/multibody/actuations/: floating-base.hpp
include/crocoddyl/multibody/contacts/: contact-6d.hpp  multiple-contacts.hxx
include/crocoddyl/multibody/residuals/: frame-placement.hxx
include/crocoddyl/multibody/states/: multibody.hpp  multibody.hxx
src/core/: solver-base.cpp
src/core/optctrl/: shooting.cpp  solver-base.cpp
src/core/solvers/: ddp.cpp  fddp.cpp
