SET(${PROJECT_NAME}_BENCHMARK
  unicycle-optctrl
  arm-manipulation-optctrl
  )

FOREACH(BENCHMARK_NAME ${${PROJECT_NAME}_BENCHMARK})
  ADD_EXECUTABLE(${BENCHMARK_NAME} ${BENCHMARK_NAME}.cpp)
  TARGET_LINK_LIBRARIES(${BENCHMARK_NAME} ${PROJECT_NAME} example-robot-data::example-robot-data)
  ADD_CUSTOM_TARGET("benchmarks-cpp-${BENCHMARK_NAME}"
    ${BENCHMARK_NAME} \${INPUT})
ENDFOREACH(BENCHMARK_NAME ${${PROJECT_NAME}_BENCHMARK})

IF(BUILD_WITH_CODEGEN_SUPPORT)
  FOREACH(BENCHMARK_NAME ${${PROJECT_NAME}_CODEGEN_BENCHMARK})
    TARGET_LINK_LIBRARIES(${BENCHMARK_NAME} ${CMAKE_DL_LIBS})
  ENDFOREACH(BENCHMARK_NAME ${${PROJECT_NAME}_CODEGEN_BENCHMARK})
ENDIF()
